<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NudgeSpot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="find_id">ID</string>
    <string name="name">Full Name</string>
    <string name="email">E-Mail</string>
    <string name="find">Find</string>
    <string name="go_to_identify">Identify User</string>
    <string name="go_to_find">Find User</string>
    <string name="identify">Identify</string>
    <string name="age">Age</string>
    <string name="gender">Choose your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>